testdata/baselines/reference/submodule/conformance/annotatedThisPropertyInitializerDoesntNarrow.errors.txt
Compilation.js(8,9): error TS2322: Type '{}' is not assignable to type '{ [assetName: string]: number; }'.
  Index signature for type 'string' is missing in type '{}'.


==== Compilation.js (1 errors) ====
    // from webpack/lib/Compilation.js and filed at #26427
    /** @param {{ [s: string]: number }} map */
    function mappy(map) {}
    
    export class C {
        constructor() {
            /** @type {{ [assetName: string]: number}} */
            this.assets = {};
            ~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ [assetName: string]: number; }'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
        }
        m() {
            mappy(this.assets)
        }
    }
    